refactor aplica formatação